--- a/index.html
+++ b/index.html
@@ -11,20 +11,29 @@
 	</head>
 	<body>
 		<header>
-			<h1>THICKfiction</h1>
-			<h2>short fiction and poetry by Tristan M. Palmer</h2>
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="fiction.html">Fiction</a></li>
-					<li><a href="poetry.html">Poetry</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="about.html">About</a></li>
-				</ul>
-			</nav>
+			<div id="banner"></div>
+				<h1>THICKfiction</h1>
+				<h2>short fiction and poetry by Tristan M. Palmer</h2>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="fiction.html">Fiction</a></li>
+						<li><a href="poetry.html">Poetry</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="about.html">About</a></li>
+					</ul>
+				</nav>
+			</div>
 		</header>
-		<section></section>
-		<footer></footer>
+		<div id="sidebar">
+			<p>This will be the Quick Menu for jumping to stories and poems.</p>
+		</div>
+		<section>
+			<p>Here will lie the main content of each story/poem.</p>
+		</section>
+		<footer>
+			<p>&copy; 2015 Tristan M. Palmer.</p>
+		</footer>
 	<script src="thickestfictionscript.js"></script>
 	</body>
 </html>
