--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 		<meta charset="utf-8">
     	<title>THICKfiction | short fiction and poetry by Tristan M. Palmer</title>
     	<link rel="stylesheet" href="CSS/normalize.css">
-    	<link rel="stylesheet" href="CSS/thickfictionstyle.css">
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Architects+Daughter" />
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Amatic+SC" />
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker" />
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Shadows+Into+Light" />
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Covered+By+Your+Grace" />
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Atomic+Age" />
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" />
+    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Goblin+One" />
+       	<link rel="stylesheet" href="CSS/thickfictionstyle.css">
 		<link rel="stylesheet" href="CSS/responsive.css">
 		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +20,9 @@
 	<body>
 		<header>
 			<div id="banner"></div>
-				<h1>THICKfiction</h1>
-				<h2>short fiction and poetry by Tristan M. Palmer</h2>
+				<h1>THICK</h1>
+				<h2>fiction</h2>
+				<h3>short fiction and poetry by Tristan M. Palmer</h3>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -25,15 +34,18 @@
 				</nav>
 			</div>
 		</header>
-		<div id="sidebar">
-			<p>This will be the Quick Menu for jumping to stories and poems.</p>
+		<div id="sidebar" class="sidebar">
+			<p>This will be the Quick Menu for jumping to and between stories and poems.</p>
 		</div>
-		<section>
-			<p>Here will lie the main content of each story/poem.</p>
-		</section>
-		<footer>
+		<div id="content">
+			<section>
+				<p>Hello there, the main contect of each page will be displayed here. Unfortunately, the site is under construction, so you'll be getting this generic message for a bit.</p>
+			</section>
+		</div>
+		<footer id"copy">
 			<p>&copy; 2015 Tristan M. Palmer.</p>
 		</footer>
+	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="thickestfictionscript.js"></script>
 	</body>
 </html>
