--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<body>
 		<header>
 			<div id="banner"></div>
-				<h1>THICK</h1>
-				<h2>fiction</h2>
-				<h3>short fiction and poetry by Tristan M. Palmer</h3>
+				<h1 id="thick">THICK</h1>
+				<h2 id="fiction">fiction</h2>
+				<h3 id="tag">short fiction and poetry by Tristan M. Palmer</h3>
 				<nav>
-					<ul>
+					<ul >
 						<li><a href="index.html">Home</a></li>
 						<li><a href="fiction.html">Fiction</a></li>
 						<li><a href="poetry.html">Poetry</a></li>
@@ -35,7 +35,15 @@
 			</div>
 		</header>
 		<div id="sidebar" class="sidebar">
-			<p>This will be the Quick Menu for jumping to and between stories and poems.</p>
+			<ul>
+				<li class="year">2015</li>
+				<li class="year">2014</li>
+				<li class="year">2013</li>
+				<li class="year">2012</li>
+				<li class="year">2011</li>
+				<li class="year">2010</li>
+				<li class="year">2009</li>
+			</ul>
 		</div>
 		<div id="content">
 			<section>
