--- a/projects.html
+++ b/projects.html
@@ -1,20 +1,59 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Projects</title>
+		<meta charset="utf-8">
+	 	<title>THICKfiction | short fiction and poetry by Tristan M. Palmer</title>
+	 	<link rel="stylesheet" href="CSS/normalize.css">
+	   	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Architects+Daughter" />
+	    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Amatic+SC" />
+	    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Permanent+Marker" />
+	    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Shadows+Into+Light" />
+	    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Covered+By+Your+Grace" />
+	    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Atomic+Age" />
+	    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" />
+	    	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Goblin+One" />
+	      	<link rel="stylesheet" href="CSS/thickfictionstyle.css">
+		<link rel="stylesheet" href="CSS/responsive.css">
+		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
-			<h1></h1>
-			<h2></h2>
-			<nav>
-				<ul>
-					<li>
-				</ul>
-			</nav>
+			<div id="banner"></div>
+				<h1 id="thick">THICK</h1>
+				<h2 id="fiction">fiction / projects</h2>
+				<h3 id="tag">short fiction and poetry by Tristan M. Palmer</h3>
+				<nav>
+					<ul >
+						<li><a href="index.html">Home</a></li>
+						<li><a href="fiction.html">Fiction</a></li>
+						<li><a href="poetry.html">Poetry</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="about.html">About</a></li>
+					</ul>
+				</nav>
+			</div>
 		</header>
-		<section></section>
-		<footer></footer>
+		<div id="sidebar" class="sidebar">
+			<ul>
+				<li class="year">2015</li>
+				<li class="year">2014</li>
+				<li class="year">2013</li>
+				<li class="year">2012</li>
+				<li class="year">2011</li>
+				<li class="year">2010</li>
+				<li class="year">2009</li>
+			</ul>
+		</div>
+		<div id="content">
+			<section>
+				<p>Hello there, the main contect of each page will be displayed here. Unfortunately, the site is under construction, so you'll be getting this generic message for a bit.</p>
+			</section>
+		</div>
+		<footer id"copy">
+			<p>&copy; 2015 Tristan M. Palmer.</p>
+		</footer>
+	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="thickestfictionscript.js"></script>
 	</body>
 </html>
